RESOLVED FIXED134429
REGRESSION (r170450): WebPageProxy::attributedSubstringForCharacterRangeAsync never calls its callback function
https://bugs.webkit.org/show_bug.cgi?id=134429
Summary REGRESSION (r170450): WebPageProxy::attributedSubstringForCharacterRangeAsync...
mitz
Reported 2014-06-28 11:19:13 PDT
REGRESSION: WebPageProxy::attributedSubstringForCharacterRangeAsync never calls its callback function
Attachments
Don't put the callback function in a throwaway callback (1.98 KB, patch)
2014-06-28 11:19 PDT, mitz
thorton: review+
mitz
Comment 1 2014-06-28 11:19:22 PDT
Created attachment 234050 [details] Don't put the callback function in a throwaway callback
mitz
Comment 2 2014-06-28 15:32:02 PDT
Alexey Proskuryakov
Comment 3 2014-06-28 23:10:00 PDT
This was a regression from <http://trac.webkit.org/r170254>, correct?
mitz
Comment 4 2014-06-28 23:19:33 PDT
(In reply to comment #3) > This was a regression from <http://trac.webkit.org/r170254>, correct? No, <http://trac.webkit.org/r170168>.
mitz
Comment 5 2014-06-28 23:22:09 PDT
(In reply to comment #4) > (In reply to comment #3) > > This was a regression from <http://trac.webkit.org/r170254>, correct? > > No, <http://trac.webkit.org/r170168>. Sorry, I meant: <http://trac.webkit.org/r170450>.
mitz
Comment 6 2014-06-29 17:09:57 PDT
Note You need to log in before you can comment on or make changes to this bug.