REGRESSION: WebPageProxy::attributedSubstringForCharacterRangeAsync never calls its callback function https://bugs.webkit.org/show_bug.cgi?id=134429

Reviewed by Tim Horton.

* UIProcess/mac/WebPageProxyMac.mm:
(WebKit::WebPageProxy::attributedSubstringForCharacterRangeAsync):



Canonical link: https://commits.webkit.org/152407@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170569 268f45cc-cd09-0410-ab3c-d52691b4dbfc